fix button mobile, overflow-x, semantic img, hide nav

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -11,6 +11,10 @@ $yellow-light: rgb(255, 255, 195);
   font-family: "League Spartan", sans-serif;
 }
 
+html{
+  overflow-x:hidden;
+}
+
 .skip-link {
   position: absolute;
   top: -40px;
@@ -25,8 +29,11 @@ $yellow-light: rgb(255, 255, 195);
   top: 0;
 }
 
+// kenapa ketika layar kecil navbar tidak full width?
+
 .nav {
   display: flex;
+  flex-wrap:no-wrap;
   justify-content: space-between;
   align-items: center;
   padding: 0 20px;
@@ -35,7 +42,8 @@ $yellow-light: rgb(255, 255, 195);
   position: sticky;
   top: 0;
   z-index: 99;
-  max-width: 100vw;
+  width: 100vw;
+  
 
   .nav__logo {
     display: flex;
@@ -128,6 +136,8 @@ footer {
   font-weight: 600;
 }
 
+
+
 @media screen and (max-width: 425px) {
   .nav {
     flex-direction: column;
@@ -142,21 +152,29 @@ footer {
       color: $red-orange;
       border: none;
       background: none;
+      min-width:45px;
+      min-height:45px;
     }
     .nav-menu {
       position: absolute;
       transform: translateY(-100%);
       z-index: 998;
-      transition: transform 0.3s ease-in-out;
-      background: $orange;
-      padding: 20px;
+      background:$orange;
+      padding:5px;
       margin: 0px;
       min-width: 100vw;
       justify-content: space-around;
+      a{
+        min-width:45px;
+        min-height:45px;
+        display:flex;
+        flex-direction:column;
+        justify-content:center;
+      }
     }
     .nav-menu.open {
       transform: translateY(100%);
-      transition: transform 0.3s ease-in-out;
+      transition: transform 0.4s ease-in-out;
     }
   }
 }
